# doranode-rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml  settings.toml
resources/: doranode-builtin.dnode
resources/colorschemes/: dark.json  light.json
resources/translations/: en.json  english.json  tr.json  turkish.json
src/: colorscheme.rs  draw.rs  gui.rs  lib.rs  main.rs  modules.rs  node.rs  node_gui.rs  node_libary.rs  node_translations.rs  objects.rs  save.rs  settings.rs  structs.rs  translations.rs  window.rs
src/node_libary/: io.rs  math.rs  mod.rs
