[package]
name = "doranode-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = "0.27"
raylib = "5.5.1"
raylib-sys = "5.5.1"
rfd = "0.16.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
toml = "0.8"

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
