[package]
name = "doranode-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "doranode"
crate-type = ["cdylib"]

[[bin]]
name = "doranode-rs"
path = "src/main.rs"

[dependencies]
once_cell = "1.21.3"
pyo3 = { version = "0.27", features = ["extension-module"] }
raylib = "5.5.1"
raylib-sys = "5.5.1"
rfd = "0.16.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
toml = "0.8"
zip = "6.0.0"

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
